# Badger_Config_Handler

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-package.yml  test-package.yaml
src/badger_config_handler/: badger_config_handler.py
tests/: base_test_setup.py  test_json_config.py
